[gd_scene load_steps=2 format=2]

[ext_resource path="res://Src/Actors/Effects/Effect.gd" type="Script" id=1]

[node name="EffectTemplate" type="AnimatedSprite"]
script = ExtResource( 1 )

[node name="SoundEffect" type="AudioStreamPlayer2D" parent="."]
[connection signal="animation_finished" from="." to="." method="_on_EffectTemplate_animation_finished"]
[connection signal="finished" from="SoundEffect" to="." method="_on_SoundEffect_finished"]
